# causinator9000

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  action-entrypoint.sh  action.yml  docker-entrypoint.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-image.yml
config/: alert-rules.yaml  heuristics.manifest.yaml  heuristics.yaml
config/heuristics/: applications.yaml  ci-pipelines.yaml  cloud-services.yaml  compute.yaml  containers.yaml  databases.yaml  identity.yaml  kubernetes.yaml  messaging.yaml  networking.yaml  physical-infra.yaml  private.radius.yaml  private.yaml.example  routing.yaml
copilot-extension/: server.py
crates/c9k-cli/: Cargo.toml
crates/c9k-cli/src/: main.rs
crates/c9k-engine/: Cargo.toml
crates/c9k-engine/src/: lib.rs  main.rs
crates/c9k-engine/src/api/: mod.rs
crates/c9k-engine/src/checkpoint/: mod.rs
crates/c9k-engine/src/drasi/: mod.rs
crates/c9k-engine/src/ingest/: mod.rs
crates/c9k-engine/src/mcp/: mod.rs
crates/c9k-engine/src/solver/: mod.rs  ve.rs
crates/c9k-engine/tests/: golden.rs
crates/c9k-tests/: Cargo.toml
crates/c9k-tests/src/: lib.rs  topology.rs
crates/c9k-tests/tests/: smoke.rs
crates/rcie-cli/: Cargo.toml
crates/rcie-cli/src/: main.rs
crates/rcie-engine/: Cargo.toml
crates/rcie-engine/src/: lib.rs  main.rs
crates/rcie-engine/src/api/: mod.rs
crates/rcie-engine/src/drasi/: mod.rs
crates/rcie-engine/src/solver/: mod.rs  ve.rs
crates/rcie-engine/tests/: golden.rs
crates/rcie-tests/: Cargo.toml
crates/rcie-tests/src/: lib.rs
crates/rcie-tests/tests/: smoke.rs
docs/: alert-rules.md  cpts.md  data-sources.md  inference.md  mcp-server.md
mcp-server/: action_report.py  server.py
prompts/: transpiler.md
scripts/: demo.py  demo_identity.py  demo_policy.sh  golden_tests.py  load_generator.py  load_test.py  monitor_receiver.py  radius_receiver.py  schema.sql  screenshot_data.py  seed_alerts.py  smoke_test.py  transpile.py
sources/: README.md  arg_source.py  azure_health_source.py  azure_policy_source.py  eventgrid_receiver.py  gh_actions_source.py  gh_webhook_receiver.py  k8s_source.py  merge.py  terraform_source.py
tests/: test_azure_health_source.py  test_gh_actions_source.py  test_merge.py
web/: index.html
