[workspace]
resolver = "2"
members = [
    "crates/c9k-engine",
    "crates/c9k-cli",
    "crates/c9k-tests",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.93"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Graph
petgraph = "0.8.3"

# HTTP
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs"] }
reqwest = { version = "0.13.2", features = ["json"] }

# CLI
clap = { version = "4.5.60", features = ["derive", "env"] }

# Time
chrono = { version = "0.4.44", features = ["serde"] }

# IDs
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# YAML
serde_yaml_ng = "0.10.0"

# Drasi (embedded CQ engine — all from same git rev to avoid version conflicts)
drasi-lib =                  { git = "https://github.com/drasi-project/drasi-core.git", branch = "main" }
drasi-core =                 { git = "https://github.com/drasi-project/drasi-core.git", branch = "main" }
drasi-source-postgres =      { git = "https://github.com/drasi-project/drasi-core.git", branch = "main" }
drasi-reaction-application = { git = "https://github.com/drasi-project/drasi-core.git", branch = "main" }
drasi-index-rocksdb =        { git = "https://github.com/drasi-project/drasi-core.git", branch = "main" }
drasi-bootstrap-postgres =   { git = "https://github.com/drasi-project/drasi-core.git", branch = "main" }

# Error handling
anyhow = "1.0.102"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
