[package]
name = "c9k-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "c9k_engine"
path = "src/lib.rs"

[[bin]]
name = "c9k-engine"
path = "src/main.rs"

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tokio.workspace = true
petgraph.workspace = true
axum.workspace = true
tower-http.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml_ng.workspace = true

# Engine-specific
ordered-float = "5.1.0"
regex = "1"

# MCP (Model Context Protocol) server
rmcp = { version = "1.1", features = ["server", "transport-io"] }

# Drasi (embedded CQ engine)
drasi-lib.workspace = true
drasi-core.workspace = true
drasi-source-postgres.workspace = true
drasi-reaction-application.workspace = true
drasi-index-rocksdb.workspace = true
drasi-bootstrap-postgres.workspace = true
