[package]
name = "rcie-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rcie"
path = "src/main.rs"

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
