[package]
name = "rcie-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "rcie_tests"
path = "src/lib.rs"

[[bin]]
name = "rcie-load-test"
path = "src/bin/load_test.rs"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
